pages sections layout overflow fixed

--- a/src/Components/Home/Home.scss
+++ b/src/Components/Home/Home.scss
@@ -148,6 +148,7 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  overflow: hidden;
   -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
   -ms-flex-direction: row;
