--- a/src/index.css
+++ b/src/index.css
@@ -23,6 +23,7 @@ p {
 
 body {
   font-family: "Open Sans", sans-serif;
+  flex-wrap: wrap;
 }
 
 
